<resources>
    <string name="app_name">Ractsil</string>
    <string name="error">Error while loading cars. Check your internet connection.</string>
    <string name="no_cars">No cars were listed!</string>
    <string name="error_detail">Something wen\'t wrong, try again refreshing your screen</string>
    <string name="make">Make: </string>
    <string name="model">Model: </string>
    <string name="owner">Owner: </string>
    <string name="fuel">Fuel: </string>
    <string name="fuel_level">Fuel level: </string>
    <string name="transmission">Transmission: </string>
    <string name="inner_cleanliness">Inner Cleanliness: </string>
    <string name="petrol">(Petrol)</string>
    <string name="diesel">(Diesel)</string>
    <string name="unknown">Unknown</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="regular">Regular</string>
    <string name="clean">Clean</string>
    <string name="very_clean">Very clean</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="empty" />
</resources>
