<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.hiroozawa.ractsil.ui.detail.CarDetailViewModel" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/car_detail_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="center"
                app:image="@{viewmodel.car.imageUrl}"
                tools:src="@drawable/ic_fallback" />
        </LinearLayout>


        <TextView
            android:id="@+id/license_plate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{viewmodel.car.licensePlate}"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_detail_image"
            tools:text="M-i7362" />


        <TextView
            android:id="@+id/make_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_margin"
            android:text="@{viewmodel.car.makeName}"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="@+id/model_value"
            app:layout_constraintStart_toEndOf="@+id/model_value"
            app:layout_constraintTop_toTopOf="@+id/model_value"
            tools:text="BMW" />

        <TextView
            android:id="@+id/model_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/model"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/license_plate" />

        <TextView
            android:id="@+id/model_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@{viewmodel.car.modelName}"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="@id/model_label"
            app:layout_constraintStart_toEndOf="@+id/model_label"
            app:layout_constraintTop_toTopOf="@+id/model_label"
            tools:text="MINI" />

        <TextView
            android:id="@+id/owner_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/owner"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/model_label" />

        <TextView
            android:id="@+id/owner_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@{viewmodel.car.ownerName}"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="@+id/owner_name_label"
            app:layout_constraintStart_toEndOf="@+id/owner_name_label"
            app:layout_constraintTop_toTopOf="@+id/owner_name_label"
            tools:text="Florian" />

        <TextView
            android:id="@+id/fuel_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fuel"
            android:layout_marginStart="@dimen/default_margin"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_name_label" />

        <TextView
            android:id="@+id/fuel_type_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_margin"
            android:text="@{viewmodel.car.fuelType}"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="@+id/fuel_type_label"
            app:layout_constraintStart_toEndOf="@+id/fuel_level_value"
            app:layout_constraintTop_toTopOf="@+id/fuel_type_label"
            tools:text="Petrol" />


        <TextView
            android:id="@+id/fuel_level_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/default_margin"
            android:text="@{viewmodel.car.fuelLevel}"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="@+id/fuel_type_value"
            app:layout_constraintStart_toEndOf="@+id/fuel_type_label"
            app:layout_constraintTop_toTopOf="@+id/fuel_type_value"
            tools:text="80%" />

        <TextView
            android:id="@+id/transmission_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingStart="@dimen/default_margin"
            android:text="@string/transmission"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inner_cleanliness_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/transmission_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@{viewmodel.car.transmission}"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="@+id/transmission_label"
            app:layout_constraintStart_toEndOf="@+id/transmission_label"
            app:layout_constraintTop_toTopOf="@+id/transmission_label"
            tools:text="Manual" />

        <TextView
            android:id="@+id/inner_cleanliness_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@string/inner_cleanliness"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fuel_type_label" />

        <TextView
            android:id="@+id/inner_cleanliness_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:text="@{viewmodel.car.innerCleanliness}"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBottom_toBottomOf="@+id/inner_cleanliness_label"
            app:layout_constraintStart_toEndOf="@+id/inner_cleanliness_label"
            app:layout_constraintTop_toTopOf="@+id/inner_cleanliness_label"
            tools:text="Regular" />

        <LinearLayout
            android:id="@+id/emptyLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:visibility="@{viewmodel.error ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/car_detail_image">

            <ImageView
                android:id="@+id/error_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_error" />

            <TextView
                android:id="@+id/empty_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/list_item_padding"
                android:text="@string/error_detail"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>